# penning-helper

./: .gitignore  Cargo.toml  Subscriptions Social Drink 6 September 2023-09-03 105915.xlsx
.github/workflows/: rust-release.yaml  rust.yaml
penning-helper-config/: Cargo.toml
penning-helper-config/src/: lib.rs  version.rs
penning-helper-config/src/v1/: conscribo.rs  mail.rs  sepa.rs
penning-helper-conscribo/: Cargo.toml
penning-helper-conscribo-old/: Cargo.toml
penning-helper-conscribo-old/src/: async_client.rs  error.rs  lib.rs  requests.rs  results.rs
penning-helper-conscribo/src/: accounts.rs  add_invoice.rs  add_transaction.rs  async_client.rs  entities.rs  entity_types.rs  error.rs  field_definitions.rs  lib.rs  multirequest.rs  requests.rs  response.rs  results.rs  session.rs  transactions.rs
penning-helper-conscribo/src/entities/: filters.rs
penning-helper-interface/: Cargo.toml
penning-helper-interface/src/: background_requester.rs  file_receiver.rs  main.rs  member_info.rs  merch_sales.rs  popup.rs  rekening_selector.rs  sepa_stuff.rs  settings.rs  turflist.rs  version_info.rs
penning-helper-macros/: Cargo.toml
penning-helper-macros-impl/: Cargo.toml
penning-helper-macros-impl/src/: lib.rs
penning-helper-macros/src/: lib.rs
penning-helper-mail/: Cargo.toml
penning-helper-mail/src/: lib.rs
penning-helper-mail/templates/: email.html
penning-helper-pdf/: Cargo.toml
penning-helper-pdf/src/: lib.rs  turflist.rs
penning-helper-sepa/: Cargo.toml
penning-helper-sepa/src/: invoice.rs  lib.rs  transfer.rs
penning-helper-sepa/src/invoice/: invoice_gen.rs
penning-helper-sepa/src/transfer/: transfer_gen.rs
penning-helper-turflists/: Cargo.toml
penning-helper-turflists/src/: csv.rs  lib.rs  matched_turflist.rs  matcher.rs  turflist.rs  xlsx.rs
penning-helper-types/: Cargo.toml
penning-helper-types/src/: address.rs  date.rs  euro.rs  lib.rs
src/: main.rs
