[package]
name = "penning-helper"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

penning-helper-macros = { path = "penning-helper-macros" }
penning-helper-sepa = { path = "penning-helper-sepa" }
penning-helper-conscribo = { path = "penning-helper-conscribo" }
penning-helper-types = { path = "penning-helper-types" }
penning-helper-mail = { path = "penning-helper-mail" }
penning-helper-config = { path = "penning-helper-config" }
penning-helper-turflists = { path = "penning-helper-turflists" }
serde_json = "1.0"
reqwest = { version = "0.12.7", features = ["json"] }
semver = "1.0.23"

[workspace.package]
version = "0.1.7"


[workspace]
resolver = "2"

default-members = ["penning-helper-interface"]

members = [
    "penning-helper-macros",
    "penning-helper-sepa",
    "penning-helper-conscribo",
    # "penning-helper-conscribo-old",
    "penning-helper-types",
    "penning-helper-mail",
    "penning-helper-config",
    "penning-helper-turflists",
    "penning-helper-interface",
    # "penning-helper-interface-v2",
    "penning-helper-pdf", 
    "penning-helper-macros-impl",
]
