[package]
name = "penning-helper-conscribo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
penning-helper-macros = { path = "../penning-helper-macros" }
serde_with = "3.3"
chrono = "0.4"
penning-helper-types = { path = "../penning-helper-types" }
penning-helper-config = { path = "../penning-helper-config" }