[package]
name = "penning-helper-conscribo"
version.workspace = true
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.9.0"
thiserror = "1.0"

penning-helper-types = { path = "../penning-helper-types" }
dirs = "5.0.1"
bitcode = { version = "0.6.3", features = ["serde"] }
bincode = "1.3.3"
