[package]
name = "penning-helper-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.22", features = ["wayland", "wgpu"] }
penning-helper-turflists = { path = "../penning-helper-turflists" }
penning-helper-types = { path = "../penning-helper-types" }
rfd = "0.11"
penning-helper-conscribo = { path = "../penning-helper-conscribo" }
egui_extras = { version = "0.22", features = ["datepicker"] }
egui_dock = "0.6"
penning-helper-config = { path = "../penning-helper-config" }
egui = { version = "0.22" }
dirs = "5.0"
regex = "1.9"
penning-helper-pdf = { path = "../penning-helper-pdf" }
open = "5.0"
penning-helper-sepa = { path = "../penning-helper-sepa" }
penning-helper-mail = { path = "../penning-helper-mail" }
chrono = "0.4"
rand = "0.8"
