[package]
name = "penning-helper-mail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.0"
lettre = { version = "0.10.4", features = ["serde"] }
penning-helper-types = { path = "../penning-helper-types" }
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.47"
penning-helper-config = { path = "../penning-helper-config" }
