[package]
name = "penning-helper-mail"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12"
lettre = { version = "0.11", features = ["serde"] }
penning-helper-types = { path = "../penning-helper-types" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
penning-helper-config = { path = "../penning-helper-config" }
