[package]
name = "penning-helper-pdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genpdf = { version = "0.2", features = ["images"] }
image = "0.23"
once_cell = "1.19"
penning-helper-turflists = { path = "../penning-helper-turflists" }
rand = "0.8"
penning-helper-types = { path = "../penning-helper-types" }
