[package]
name = "penning-helper-sepa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
xml-rs = "0.8.16"
rand = "0.8.5"
penning-helper-types = { path = "../penning-helper-types" }
penning-helper-config = { path = "../penning-helper-config" }