[package]
name = "penning-helper-sepa"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
xml-rs = "0.8"
rand = "0.8"
penning-helper-types = { path = "../penning-helper-types" }
penning-helper-config = { path = "../penning-helper-config" }
thiserror = "1.0"
