[package]
name = "penning-helper-turflists"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.21.2"
csv = "1.2.2"
penning-helper-types = { path = "../penning-helper-types" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.108"
textdistance = "1.0.2"
thiserror = "1.0.47"
